--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,12 @@ spring:
     redis:
       host: localhost
       port: 6379
-      password:  # ?? ? ??
+      password:
       timeout: 6000ms
+
+    mongodb:
+      uri: mongodb://localhost:27017/local  # MongoDB URI, mydatabase는 실제 사용하려는 데이터베이스 이름
+      username:
+      password:
+      authentication-database: admin  # 인증 DB (기본 값은 admin)
+      database: local
